--- a/src/assets/style/theme.less
+++ b/src/assets/style/theme.less
@@ -8,3 +8,5 @@
 @button-default-disabled-bg-color: @orcaButtonColor;
 
 @button-default-active-bg-color: @orcaButtonColor;
+
+@button-global-font-color: #FFFFFF;
