--- a/src/assets/style/theme.less
+++ b/src/assets/style/theme.less
@@ -10,3 +10,7 @@
 @button-default-active-bg-color: @orcaButtonColor;
 
 @button-global-font-color: #FFFFFF;
+
+@popover-bg-color: #35bcff;
+
+@popover-font-color: #35bcff;
