--- a/src/assets/style/theme.less
+++ b/src/assets/style/theme.less
@@ -11,6 +11,4 @@
 
 @button-global-font-color: #FFFFFF;
 
-@popover-bg-color: #35bcff;
-
-@popover-font-color: #35bcff;
+@popover-bg-color: rgba(82, 116, 180, 0.9);
